adv on punto 12

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -380,7 +380,9 @@
       "p2": "La AAIP, en su carácter de Órgano de Control de la Ley de Protección de Datos Personales tiene la atribución de atender las denuncias y reclamos que interpongan quienes resulten afectados en sus derechos por incumplimiento de las normas vigentes en materia de protección de datos personales.",
       "p3": "Sin limitar lo anterior, ante cualquier diferencia, desacuerdo o conflicto derivado de la aplicación, interpretación, validez, y/o alcance de la presente Política, el Usuario debe comunicarse con Atómico de manera fehaciente, haciéndole llegar su reclamo para que las partes intenten llegar a un acuerdo. En caso de que, luego de transcurridos 20 (veinte) días de iniciado el reclamo, no hubiese sido posible arribar a una solución, el Usuario también podrá elegir y someter su reclamo a cualquiera de las siguientes instancias, de resultar competentes:",
       "a": "Tribunales ordinarios de la Ciudad de Asunción, República del Paraguay, con competencia en la materia ",
-      "b": "Dirección General de Defensa y Protección del Consumidor del Gobierno de la Ciudad de Buenos Aires (más información en http://www.buenosaires.gob.ar/defensaconsumidor/direccion-general), o de la Provincia o municipalidad en donde el Usuario tenga su domicilio, y en la que exista una instancia de arbitraje o procedimiento para la solución de controversias.",
+      "b": "Dirección General de Defensa y Protección del Consumidor del Gobierno de la Ciudad de Buenos Aires (más información en",
+      "b link": "http://www.buenosaires.gob.ar/defensaconsumidor/direccion-general",
+      "b.1":  ") o de la Provincia o municipalidad en donde el Usuario tenga su domicilio, y en la que exista una instancia de arbitraje o procedimiento para la solución de controversias.",
       "c": "Tribunales ordinarios con competencia en la materia y asiento en el lugar en donde el Usuario tenga su domicilio."
       
     }
