--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -385,6 +385,12 @@
       "b.1":  ") o de la Provincia o municipalidad en donde el Usuario tenga su domicilio, y en la que exista una instancia de arbitraje o procedimiento para la solución de controversias.",
       "c": "Tribunales ordinarios con competencia en la materia y asiento en el lugar en donde el Usuario tenga su domicilio."
       
+    },
+    "informacion punto 13": {
+      "p1": "La información de contacto del responsable registrado de la base de datos es: Atómico S.A.", 
+      "p2": "Domicilio: Av. Aviadores del Chaco 2351 piso 8 Asunción, Paraguay ",
+      "p3": "Email: support@atomico3.io"
+      
     }
     
     
