--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -564,6 +564,17 @@
             "p3": "En caso de que el Usuario olvide o pierda su contraseña podrá recuperarla por los medios disponibles a través de la Plataforma, en defecto de lo cual deberá contactarse con Atómico a la dirección support@atomico3.io.",
             "p4": "El Usuario acepta, entiende y reconoce que Atómico, en ningún caso tiene acceso o conocimiento de la contraseña que el Usuario haya elegido al momento de la creación o recuperación de la Cuenta debido a que la misma se encuentra encriptada bajo estrictos protocolos de seguridad.",
             "p5": "Atómico hará sus mejores esfuerzos para mantener la confidencialidad y seguridad de los Usuarios, pero no responderá por perjuicios que se puedan derivar de la violación de dichas medidas por parte de terceros que utilicen las redes públicas o el Internet para acceder a dicha información o en los casos en que exista culpa o negligencia del Usuario."
+          },
+          "informacion punto 13": {
+            "p1": "El Usuario reconoce que Atómico no otorga, por sí, créditos de ningún tipo."
+           },
+           "informacion punto 14": {
+            "p1": "Atómico podrá modificar en cualquier momento estos T&C. El Usuario será notificado de esas modificaciones a través de la publicación de los nuevos T&C en la Plataforma. El Usuario acepta que el acceso o uso de la Plataforma desde la modificación, constituye aceptación íntegra de los nuevos T&C, de no estar de acuerdo con los nuevos T&C, el Usuario deberá dejar de acceder o usar la Plataforma. En caso de modificaciones a características esenciales del Servicio el Usuario será notificado a través de la publicación de los nuevos T&C en la Plataforma y se le otorgará la posibilidad de aceptar o no los mismos. En caso de no aceptar los nuevos T&C y sea necesario el consentimiento del Usuario para la prestación de los Servicios, se procederá a deshabilitar parcial o totalmente el acceso a los Servicios y/o al cierre de la Cuenta."
+           },
+           "informacion punto 15":  {
+            "p1": "Todo el contenido de la Plataforma, incluyendo, pero no limitado, al diseño de sus pantallas, materiales promocionales, las marcas, nombres comerciales, signos distintivos, textos, gráficos, logos, imágenes, íconos, botones, videos, sonidos, música, bases de datos, código fuente, software y combinaciones de colores ('Contenido'), es de titularidad de Atómico o de sus licenciantes. El Contenido no podrá ser reproducido, modificado, transformado, editado, traducido, cedido, distribuido, representado, comercializado, comunicado públicamente, almacenado, usado para fines distintos de los previstos en estos T&C, ni ser objeto de obras derivadas, sin autorización previa y por escrito del titular de los derechos.",
+            "p2": "El hecho de que el Usuario pueda acceder a la Plataforma no le otorga licencia, derecho ni titularidad alguna sobre los derechos de propiedad industrial o intelectual sobre la totalidad ni sobre porción alguna del Contenido. Solamente se otorga a los Usuarios, sobre la Plataforma y sobre el Contenido, una licencia no exclusiva, revocable y limitada para acceder y usar la Plataforma de conformidad con estos T&C.",
+            "p3": "Si el Usuario considera que en la Plataforma o en el Contenido se violara algún derecho de propiedad intelectual de terceros, deberá notificarlo a Atómico a la dirección indicada en los presentes T&C, acompañando toda la información y documentación necesaria que respalde la mencionada consideración."
           }
         
         
