--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -575,8 +575,12 @@
             "p1": "Todo el contenido de la Plataforma, incluyendo, pero no limitado, al diseño de sus pantallas, materiales promocionales, las marcas, nombres comerciales, signos distintivos, textos, gráficos, logos, imágenes, íconos, botones, videos, sonidos, música, bases de datos, código fuente, software y combinaciones de colores ('Contenido'), es de titularidad de Atómico o de sus licenciantes. El Contenido no podrá ser reproducido, modificado, transformado, editado, traducido, cedido, distribuido, representado, comercializado, comunicado públicamente, almacenado, usado para fines distintos de los previstos en estos T&C, ni ser objeto de obras derivadas, sin autorización previa y por escrito del titular de los derechos.",
             "p2": "El hecho de que el Usuario pueda acceder a la Plataforma no le otorga licencia, derecho ni titularidad alguna sobre los derechos de propiedad industrial o intelectual sobre la totalidad ni sobre porción alguna del Contenido. Solamente se otorga a los Usuarios, sobre la Plataforma y sobre el Contenido, una licencia no exclusiva, revocable y limitada para acceder y usar la Plataforma de conformidad con estos T&C.",
             "p3": "Si el Usuario considera que en la Plataforma o en el Contenido se violara algún derecho de propiedad intelectual de terceros, deberá notificarlo a Atómico a la dirección indicada en los presentes T&C, acompañando toda la información y documentación necesaria que respalde la mencionada consideración."
-          }
-        
+          },
+            "informacion punto 16": {
+              "p1": "El Usuario acepta que Atómico podrá, en cualquier momento y sin necesidad de preaviso, interrumpir, suspender, discontinuar, eliminar o modificar la Plataforma y cualquier producto o Servicio ofrecido, mediante decisión fundada.",
+              "p2": "Atómico no será responsable por la insolvencia de las entidades financieras en las que el Atómico mantenga los fondos en pesos de las cuentas, ni por la insolvencia de los terceros cuyos servicios hayan sido contratados por Atómico para prestar sus Servicios."
+            }
+          
         
       
     }
