--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -670,10 +670,14 @@
         "21.5 p44": "La promoción no es acumulable con otras promociones y no es transferible.",
         "21.5 p45": "Atómico podrá modificar en cualquier momento la Promoción, incluso eliminarla, sin necesidad de aviso previo al Usuario. La modificación o eliminación no otorgará al Usuario derecho a reclamar a Atómico por ningún concepto.",
         "21.5 p46": "En el caso de  alguna de las Promociones o Descuentos anteriores, sea aplicable en forma acumulativa una promoción definida por VISA, deberá tenerse en cuenta los propios términos estipulados en",
-        "21.5 p46 link": "https://www.visa.com.ar/es_ar/promociones/"
-
-
-
+        "21.5 p46 link": "https://www.visa.com.ar/es_ar/promociones/",
+        "21.6": "Conforme se indica en la cláusula 9.4.10., si se realiza una compra con la Tarjeta Prepaga de ATOMICO3 habiendo seleccionado AT3 medio de pago,  Atómico procederá a la venta de la cantidad necesaria del activo digital seleccionado para obtener los pesos argentinos correspondientes para afrontar el pago de la suma indicada por el Comercio. Para dicha venta, Atómico utilizará el valor de venta de dicho activo al momento de realizar la operación. Atómico cobrará al usuario la comisión correspondiente a una venta de activo digital.  En caso de que se trate de una compra en moneda extranjera o en el exterior, habiendo seleccionado alguno de los activos digitales como medio de pago, Atómico procederá, además de la comisión por la venta indicada, al cobro de un costo fijo estipulado por VISA.", 
+        "21.6 p1": "Dicho costo dependerá del monto de transacción a considerarse en el equivalente en dólares estadounidenses (“USDT”), y se aplicará una vez que haya sido aprobada la transacción.",
+        "21.6 p2": "Tier 1 - de 0,01 a 5 USD - Costo fijo: 0,11 USD",
+        "21.6 p3": "Tier 2 - de 5,01 a 15 USD - Costo fijo: 0,18 USD",
+        "21.6 p4": "Tier 3 - de 15,01 a 50 USD- Costo fijo: 0,24 USD",
+        "21.6 p5": "Tier 4 - 50,01 USD o más - Costo Fijo: 0,54 USD"
+        
 
 
       }
