--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -692,6 +692,22 @@
       "informacion punto 25": {
         "p1": "Los T&C se encuentran regidos sin excepción y en todos sus puntos por las leyes de la República del Paraguay y serán interpretados de acuerdo con ellas.",
         "p2": "Ante cualquier diferencia, desacuerdo o conflicto derivado del uso de la Plataforma y/o de los Servicios, o de la interpretación, validez, y/o alcance de los presentes T&C, el Usuario podrá a iniciar su reclamo a través de los medios previstos en la Plataforma, o en su defecto a comunicarse con Atómico de manera fehaciente, haciéndole llegar su reclamo, para que las partes traten de llegar a un acuerdo antes de iniciar cualquier reclamo ante la jurisdicción que le corresponda."
+      },
+      "informacion punto 26": {
+        "p1": "Todas las sugerencias, opiniones, quejas y comentarios que realice el Usuario por cualquier medio podrán ser tenidos en cuenta, implementados, difundidos o adaptados por Atómico, sin que ello genere derecho alguno a favor del Usuario que los haya efectuado o propuesto."
+      },
+      "informacion punto 27": {
+        "p1": "Atómico cuenta con un centro de atención al Usuario. Para contactarse, puede hacerlo por correo electrónico a",
+        "p1.1": "y/o cualquier otro medio dispuesto por Atómico a tal fin."
+      }, "informacion punto 28": {
+        "p1": "Todas las notificaciones que deban efectuarse a Atómico por el acceso o uso de la Plataforma bajo estos T&C deberán realizarse por escrito a su correo electrónico o dirección postal indicados a continuación:",
+        "p2": "Atómico3 S.A ", 
+        "p3": "RUC: 80144052-1", 
+        "p4": "Dirección:", 
+        "p5": "Av. Aviadores del Chaco 2351 8 piso, Asunción, Republica del Paraguay", 
+        "p6": "Correo electrónico:", 
+        "p7": "support@Atómico3.io"
+      
       }
     }
   }
