--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -227,7 +227,7 @@
       "indice": "Index",
       "title1": "What is the content and scope of this Privacy Policy?",
       "title2": "Scope of your consent",
-      "title3": "Things to keep in mind when reading our Policy!",
+      "title3": "To be clear when reading our Policy!",
       "title4": "What information do we collect and process?",
       "title5": "For what purposes do we process the information?",
       "title6": "With whom do we share the information and how can we process your Personal Information?",
