--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -231,7 +231,7 @@
       "title4": "What information do we collect and process?",
       "title5": "For what purposes do we process the information?",
       "title6": "With whom do we share the information and how can we process your Personal Information?",
-      "title7": "What security and confidentiality measures do we take for the information?",
+      "title7": "What information security and confidentiality measures do we take?",
       "title8": "How can we communicate with you and what type of information can we provide?",
       "title9": "Can we modify this Policy? What happens in the event of a sale or change of control of the Companies?",
       "title10": "What are the User's responsibilities?",
