subtitulo info sobre litio agregado

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -24,7 +24,9 @@
     "proyectos de": "Tokenization",
     "tokenizacion": "projects",
     "proyectos de tokenizacion": "Tokenization projects",
-    "nuestros proyectos": "Our Proyects"
+    "nuestros proyectos": "Our Proyects",
+    "informacion sobre litio": "Information about Lithium"
+
   },
   "nosotros": {
     "title": "We are a company legally incorporated in Paraguay, dedicated to the development and optimization of mining activity. We provide them with the tool of tokenization of certified lithium reserves, seeking to innovate and revolutionize the electromobility industry. ",
