--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -24,7 +24,8 @@
     "proyectos de": "Proyectos de",
     "tokenizacion": "tokenización",
     "proyectos de tokenizacion": "Proyectos de tokenización",
-    "nuestros proyectos": "Nuestros Proyectos"
+    "nuestros proyectos": "Nuestros Proyectos",
+    "informacion sobre litio": "Información sobre el Litio"
   },
   "nosotros": {
     "title": "Somos una compañía legalmente constituida en Paraguay, dedicada al desarrollo y optimización de la actividad minera. Les aportamos la herramienta de la tokenización de las reservas de litio certificadas, buscando con esto innovar y revolucionar la industria de la electromovilidad. ",
