advances on menu

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -7,6 +7,7 @@
     "preguntas frecuentes": "Faq",
     "ayuda": "Help",
     "noticias": "Press and Media",
+    "inverti en At3": "Invest in AT3",
     "como invertir": "How to invest",
     "feliz primavera": "Happy Spring!",
     "comprar at3": "Buy AT3",
