advances on menu

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -7,7 +7,8 @@
     "preguntas frecuentes": "Faq",
     "ayuda": "Help",
     "noticias": "Press and Media",
-    "inverti en At3": "Invest in AT3",
+    "inverti en": "Invest in",
+    "inverti en At3": "Invest in Atómico3",
     "como invertir": "How to invest",
     "feliz primavera": "Happy Spring!",
     "comprar at3": "Buy AT3",
