--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -7,7 +7,8 @@
     "preguntas frecuentes": "Preguntas Frecuentes",
     "ayuda": "Ayuda",
     "noticias": "Medios y Noticias",
-    "inverti en At3": "Invertí en AT3",
+    "inverti en": "Invertí en",
+    "inverti en At3": "Invertí en Atómico3",
     "como invertir": "Cómo invertir",
     "feliz primavera": "¡Feliz Primavera!",
     "comprar at3": "Comprar AT3",
