--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -15,6 +15,7 @@
     "tutoriales": "Tutorials",
     "soporte": "Support",
     "contacto": "Contact",
+    "descargar whitepaper": "Download Whitepaper",
     "descargar Brochure": "Download Brochure",
     "nuestro equipo": "Our Team",
     "descargar brochure": "Download Brochure",
