como invertir section: responsive

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -185,8 +185,11 @@
     "ver tutoriales": "Ver Tutoriales"
   },
   "como invertir": {
+    "inverti y ahorra": "Invertí y ahorrá en Atómico3",
+
     "como invertir": "¿Cómo Invertir en Atómico3?",
-    "como invertir p1": "En esta seccion te vamos a explicar las diferentes maneras que tenes hoy de invertir en nuestro proyecto. Debajo vas a encontrar la información detallada de cada una de ellas, los videos tutoriales y el paso a paso de como hacerlo.",
+    "como invertir p1": "En esta seccion te vamos a explicar las diferentes maneras que tenes hoy de invertir en nuestro proyecto.",
+    "como invertir p1.1": "Debajo vas a encontrar la información detallada de cada una de ellas, los videos tutoriales y el paso a paso de como hacerlo.",
     "como invertir p2": "Recuerda que el primer paso es conectar tu wallet, si todavía no sabes como hacerlo revisa los tutoriales.  ",
     "como invertir p3": "¡Desliza hacia abajo y comienza a invertir hoy!",
     "conectar tu wallet": "Conectar tu Wallet",
